--- a/.github/workflows/state-renorm-milestone-gate.yml
+++ b/.github/workflows/state-renorm-milestone-gate.yml
@@ -93,9 +93,13 @@ jobs:
         run: |
           set -euo pipefail
           mkdir -p artifacts
-          python .github/scripts/render_transition_evidence.py \
-            --base "$BASE_SHA" \
-            --head "$HEAD_SHA" | tee artifacts/transition_evidence.txt >> "$GITHUB_STEP_SUMMARY"
+          python .github/scripts/render_transition_evidence.py --base "$BASE_SHA" --head "$HEAD_SHA" \
+            | tee artifacts/transition_evidence.txt
+
+          {
+            echo "## Milestone transition evidence"
+            cat artifacts/transition_evidence.txt
+          } >> "$GITHUB_STEP_SUMMARY"
 
       - name: Upload transition evidence artifact
         if: ${{ always() }}
@@ -120,13 +124,16 @@ jobs:
           set -e
 
           if [[ $validator_status -ne 0 ]]; then
+            echo
+            echo "Action required: paste the exact transition evidence block from artifacts/transition_evidence.txt into the PR body."
+            cat artifacts/transition_evidence.txt
+
             if grep -Fq "MILESTONE_VALIDATION_ERROR=MISSING_PR_EVIDENCE" artifacts/validate_milestone_docs.log; then
               echo "VALIDATOR_MISSING_EVIDENCE=true" >> "$GITHUB_ENV"
 
               echo
               echo "Milestone validation failed: PR description is missing transitioned-capability evidence."
-              echo "Action required: paste the exact block below into the PR description (verbatim)."
-              cat artifacts/transition_evidence.txt
+              echo "See transition evidence block above."
             else
               echo
               echo "Milestone validation failed. See artifacts/validate_milestone_docs.log for details."
