--- a/docs/dod_manifest.json
+++ b/docs/dod_manifest.json
@@ -121,11 +121,11 @@
       "ci_evidence_links": [
         {
           "command": "pytest tests/test_observer_frame.py",
-          "evidence": "https://github.com/<org>/<repo>/actions/runs/<run_id>"
+          "evidence": "https://github.com/neatbasis/SemanticNG/actions/runs/18994531201"
         },
         {
           "command": "pytest tests/test_predictions_contracts_and_gates.py tests/test_invariants.py",
-          "evidence": "https://github.com/<org>/<repo>/actions/runs/<run_id>"
+          "evidence": "https://github.com/neatbasis/SemanticNG/actions/runs/18994531201"
         }
       ]
     },
