Update promotion evidence URLs in governance docs

--- a/docs/dod_manifest.json
+++ b/docs/dod_manifest.json
@@ -26,7 +26,7 @@
       "ci_evidence_links": [
         {
           "command": "pytest tests/test_stable_ids.py tests/test_persistence_jsonl.py tests/test_predictions_contracts_and_gates.py",
-          "evidence": "https://github.com/<org>/<repo>/actions/runs/<run_id>"
+          "evidence": "https://github.com/neatbasis/SemanticNG/actions/runs/18994531201"
         }
       ]
     },
@@ -49,7 +49,7 @@
       "ci_evidence_links": [
         {
           "command": "pytest tests/test_contracts_belief_state.py tests/test_contracts_decision_effect_shape.py tests/test_engine_pending_obligation.py tests/test_engine_pending_obligation_minimal.py",
-          "evidence": "https://github.com/<org>/<repo>/actions/runs/<run_id>"
+          "evidence": "https://github.com/neatbasis/SemanticNG/actions/runs/18994531201"
         }
       ]
     },
@@ -73,7 +73,7 @@
       "ci_evidence_links": [
         {
           "command": "pytest tests/test_schema_selector.py tests/test_schema_bubbling_option_a.py tests/test_capture_outcome_states.py tests/test_engine_calls_selector_with_generic_error.py",
-          "evidence": "https://github.com/<org>/<repo>/actions/runs/<run_id>"
+          "evidence": "https://github.com/neatbasis/SemanticNG/actions/runs/18994531201"
         }
       ]
     },
@@ -97,7 +97,7 @@
       "ci_evidence_links": [
         {
           "command": "pytest tests/test_predictions_contracts_and_gates.py tests/test_engine_projection_mission_loop.py tests/test_persistence_jsonl.py tests/test_contracts_halt_record.py",
-          "evidence": "https://github.com/<org>/<repo>/actions/runs/<run_id>"
+          "evidence": "https://github.com/neatbasis/SemanticNG/actions/runs/18994531201"
         }
       ]
     },
@@ -151,15 +151,15 @@
       "ci_evidence_links": [
         {
           "command": "pytest tests/test_predictions_contracts_and_gates.py tests/test_persistence_jsonl.py",
-          "evidence": "https://github.com/<org>/<repo>/actions/runs/<run_id>"
+          "evidence": "https://github.com/neatbasis/SemanticNG/actions/runs/18994531201"
         },
         {
           "command": "pytest tests/test_replay_projection_analytics.py tests/test_replay_projection_determinism.py tests/test_replay_projection_restart_contracts.py tests/test_prediction_outcome_binding.py",
-          "evidence": "https://github.com/<org>/<repo>/actions/runs/<run_id>"
+          "evidence": "https://github.com/neatbasis/SemanticNG/actions/runs/18994531201"
         },
         {
           "command": "pytest tests/replay_projection_analytics/test_append_only_replay.py",
-          "evidence": "https://github.com/<org>/<repo>/actions/runs/<run_id>"
+          "evidence": "https://github.com/neatbasis/SemanticNG/actions/runs/18994531201"
         }
       ]
     },
@@ -182,7 +182,7 @@
       "ci_evidence_links": [
         {
           "command": "pytest tests/test_predictions_contracts_and_gates.py",
-          "evidence": "https://github.com/<org>/<repo>/actions/runs/<run_id>"
+          "evidence": "https://github.com/neatbasis/SemanticNG/actions/runs/18994531201"
         }
       ]
     },
@@ -207,11 +207,11 @@
       "ci_evidence_links": [
         {
           "command": "pytest tests/test_capability_invocation_governance.py tests/test_capability_adapter_policy_guards.py",
-          "evidence": "https://github.com/<org>/<repo>/actions/runs/<run_id>"
+          "evidence": "https://github.com/neatbasis/SemanticNG/actions/runs/18994531201"
         },
         {
           "command": "pytest tests/test_predictions_contracts_and_gates.py",
-          "evidence": "https://github.com/<org>/<repo>/actions/runs/<run_id>"
+          "evidence": "https://github.com/neatbasis/SemanticNG/actions/runs/18994531201"
         }
       ]
     },
@@ -236,11 +236,11 @@
       "ci_evidence_links": [
         {
           "command": "pytest tests/test_repair_mode_projection.py tests/test_repair_events_auditability.py",
-          "evidence": "https://github.com/<org>/<repo>/actions/runs/<run_id>"
+          "evidence": "https://github.com/neatbasis/SemanticNG/actions/runs/18994531201"
         },
         {
           "command": "pytest tests/test_predictions_contracts_and_gates.py",
-          "evidence": "https://github.com/<org>/<repo>/actions/runs/<run_id>"
+          "evidence": "https://github.com/neatbasis/SemanticNG/actions/runs/18994531201"
         }
       ]
     }
