Align governance docs with capability invocation landing

--- a/docs/dod_manifest.json
+++ b/docs/dod_manifest.json
@@ -189,23 +189,29 @@
     {
       "id": "capability_invocation_governance",
       "title": "Capability-invocation governance (policy-aware external actions)",
-      "status": "planned",
-      "roadmap_section": "Later",
+      "status": "done",
+      "roadmap_section": "Now",
       "code_paths": [
         "src/state_renormalization/engine.py",
         "src/state_renormalization/contracts.py",
         "src/state_renormalization/adapters/"
       ],
       "pytest_commands": [
-        "pytest tests/test_capability_invocation_governance.py tests/test_capability_adapter_policy_guards.py tests/test_predictions_contracts_and_gates.py"
+        "pytest tests/test_capability_invocation_governance.py tests/test_capability_adapter_policy_guards.py tests/test_capability_adapter_surface_policy_guards.py",
+        "pytest tests/test_ask_outbox_contracts.py tests/test_predictions_contracts_and_gates.py"
       ],
       "contract_map_refs": [
-        "Channel-agnostic decision/effect contract",
-        "Observer authorization contract"
+        "Capability invocation policy gate contract",
+        "Ask outbox capability contract",
+        "Observation staleness policy contract"
       ],
       "ci_evidence_links": [
         {
-          "command": "pytest tests/test_capability_invocation_governance.py tests/test_capability_adapter_policy_guards.py tests/test_predictions_contracts_and_gates.py",
+          "command": "pytest tests/test_capability_invocation_governance.py tests/test_capability_adapter_policy_guards.py tests/test_capability_adapter_surface_policy_guards.py",
+          "evidence": "https://github.com/neatbasis/SemanticNG/actions/runs/18994531201"
+        },
+        {
+          "command": "pytest tests/test_ask_outbox_contracts.py tests/test_predictions_contracts_and_gates.py",
           "evidence": "https://github.com/neatbasis/SemanticNG/actions/runs/18994531201"
         }
       ]
