--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ test = [
   "pytest>=8,<9",
   "mypy>=1.9,<2",
   "ruff>=0.6,<1",
+  "pytest-cov>=5,<6",
+  "pre-commit>=4,<5",
   "gherkin-official>=30,<31",
 ]
 bdd = [
@@ -41,6 +43,28 @@ addopts = [
   "--maxfail=1",
 ]
 
+[tool.ruff]
+target-version = "py311"
+line-length = 100
+src = ["src", "tests"]
+
+[tool.ruff.lint]
+select = [
+  "E",
+  "F",
+  "I",
+  "B",
+  "UP",
+]
+ignore = [
+  "E501", # formatter owns line wrapping
+]
+
+[tool.ruff.lint.per-file-ignores]
+"tests/**/*.py" = [
+  "S101",
+]
+
 [tool.mypy]
 python_version = "3.11"
 strict = true
@@ -51,6 +75,9 @@ no_implicit_optional = true
 disallow_any_generics = true
 disallow_subclassing_any = true
 check_untyped_defs = true
+files = ["src", "tests"]
+pretty = true
+show_error_codes = true
 
 # If your project imports optional deps in some modules:
 ignore_missing_imports = false
@@ -73,4 +100,10 @@ omit = [
 [tool.coverage.report]
 show_missing = true
 skip_covered = true
-fail_under = 80
+fail_under = 85
+exclude_lines = [
+  "pragma: no cover",
+  "raise NotImplementedError",
+  "if __name__ == .__main__.:",
+  "if TYPE_CHECKING:",
+]
