--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,7 +75,7 @@ no_implicit_optional = true
 disallow_any_generics = true
 disallow_subclassing_any = true
 check_untyped_defs = true
-files = ["src", "tests"]
+files = ["src/state_renormalization", "tests"]
 pretty = true
 show_error_codes = true
 
