--- a/.github/workflows/quality-guardrails.yml
+++ b/.github/workflows/quality-guardrails.yml
@@ -31,6 +31,10 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install -e ".[test]"
 
+      - name: Validate documentation freshness SLO
+        run: |
+          python .github/scripts/validate_doc_freshness_slo.py --config docs/doc_freshness_slo.json
+
       - name: Run pre-commit
         run: pre-commit run --all-files
 
