--- a/.github/workflows/state-renorm-milestone-gate.yml
+++ b/.github/workflows/state-renorm-milestone-gate.yml
@@ -14,6 +14,8 @@ on:
       - '.github/scripts/validate_sprint_handoff.py'
       - '.github/scripts/capability_parity_report.py'
       - '.github/scripts/render_transition_evidence.py'
+      - '.github/scripts/validate_doc_freshness_slo.py'
+      - 'docs/doc_freshness_slo.json'
       - '.github/workflows/state-renorm-milestone-gate.yml'
   pull_request_target:
     types: [opened, synchronize, reopened, edited, ready_for_review]
@@ -28,6 +30,8 @@ on:
       - '.github/scripts/validate_sprint_handoff.py'
       - '.github/scripts/capability_parity_report.py'
       - '.github/scripts/render_transition_evidence.py'
+      - '.github/scripts/validate_doc_freshness_slo.py'
+      - 'docs/doc_freshness_slo.json'
       - '.github/workflows/state-renorm-milestone-gate.yml'
   merge_group:
     paths:
@@ -41,6 +45,8 @@ on:
       - '.github/scripts/validate_sprint_handoff.py'
       - '.github/scripts/capability_parity_report.py'
       - '.github/scripts/render_transition_evidence.py'
+      - '.github/scripts/validate_doc_freshness_slo.py'
+      - 'docs/doc_freshness_slo.json'
       - '.github/workflows/state-renorm-milestone-gate.yml'
 
 jobs:
@@ -59,6 +65,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
+
+      - name: Validate documentation freshness SLO
+        run: |
+          python .github/scripts/validate_doc_freshness_slo.py --config docs/doc_freshness_slo.json
 
       - name: Install test dependencies
         run: |
