--- a/.github/workflows/quality-guardrails.yml
+++ b/.github/workflows/quality-guardrails.yml
@@ -26,6 +26,9 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Verify Python support policy sync
+        run: python .github/scripts/check_python_support_policy.py
+
       - name: Install project + tooling
         run: |
           python -m pip install --upgrade pip
@@ -44,6 +47,9 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
+
+      - name: Verify Python support policy sync
+        run: python .github/scripts/check_python_support_policy.py
 
       - name: Install project + tooling
         run: |
