--- a/.github/workflows/quality-guardrails.yml
+++ b/.github/workflows/quality-guardrails.yml
@@ -15,46 +15,26 @@ on:
     branches: [main]
 
 jobs:
-  pre-commit:
+  baseline-lint-type:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
+      - name: Shared Python setup
+        uses: ./.github/actions/python-test-setup
 
       - name: Verify Python support policy sync
         run: python .github/scripts/check_python_support_policy.py
 
-      - name: Install project + tooling
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install -e ".[test]"
-
-      - name: Run pre-commit
+      - name: Run pre-commit (lint/type)
         run: pre-commit run --all-files
 
-  test-cov:
+  baseline-test-cov:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
+      - name: Shared Python setup
+        uses: ./.github/actions/python-test-setup
 
       - name: Verify Python support policy sync
         run: python .github/scripts/check_python_support_policy.py
-
-      - name: Install project + tooling
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install -e ".[test]"
 
       - name: Run tests with coverage gate
         run: pytest --cov --cov-report=term-missing --cov-report=xml
