--- a/.github/workflows/quality-guardrails.yml
+++ b/.github/workflows/quality-guardrails.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Verify Python support policy sync
         run: python .github/scripts/check_python_support_policy.py
 
+      - name: Check workflow command policy drift
+        run: python .github/scripts/workflow_policy_drift_report.py --summary
+
       - name: Run pre-commit (lint/type)
         run: pre-commit run --all-files
 
@@ -41,6 +44,9 @@ jobs:
 
       - name: Verify Python support policy sync
         run: python .github/scripts/check_python_support_policy.py
+
+      - name: Check workflow command policy drift
+        run: python .github/scripts/workflow_policy_drift_report.py --summary
 
       - name: Run tests with coverage gate
         run: pytest --cov --cov-report=term-missing --cov-report=xml
