--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools", "wheel"]
+requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "semanticng"
-version = "0.1.0"
+dynamic = ["version"]
 requires-python = ">=3.11"
 dependencies = [
   "pydantic>=2.6,<3",
@@ -26,6 +26,10 @@ bdd = [
 
 [tool.setuptools]
 package-dir = {"" = "src"}
+
+
+[tool.setuptools_scm]
+version_file = "src/semanticng/_version.py"
 
 [tool.setuptools.packages.find]
 where = ["src"]
