Harden version fallback and mypy hook dependencies

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,6 +22,10 @@ repos:
     hooks:
       - id: mypy
         args: ["--config-file=pyproject.toml"]
+        additional_dependencies:
+          - pydantic>=2.6,<3
+          - pytest>=8,<9
+          - gherkin-official>=30,<31
 
   - repo: local
     hooks:
