--- a/.github/workflows/quality-guardrails.yml
+++ b/.github/workflows/quality-guardrails.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Verify Python support policy sync
         run: python .github/scripts/check_python_support_policy.py
 
+      - name: Verify pre-commit parity
+        run: python .github/scripts/check_precommit_parity.py
+
       - name: Run pre-commit (lint/type)
         run: pre-commit run --all-files
 
