--- a/.github/workflows/state-renorm-milestone-gate.yml
+++ b/.github/workflows/state-renorm-milestone-gate.yml
@@ -76,6 +76,9 @@ jobs:
       - name: Verify Python support policy sync
         run: python .github/scripts/check_python_support_policy.py
 
+      - name: Verify pre-commit parity
+        run: python .github/scripts/check_precommit_parity.py
+
       - name: Run baseline lint/type checks
         run: pre-commit run --all-files
 
