--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,18 +14,22 @@ repos:
     rev: v0.15.4
     hooks:
       - id: ruff
+        language_version: python3.11
         args: [--fix]
       - id: ruff-format
+        language_version: python3.11
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.19.1
     hooks:
       - id: mypy
+        language_version: python3.11
         args: ["--config-file=pyproject.toml"]
         additional_dependencies:
           - pydantic>=2.6,<3
           - pytest>=8,<9
           - gherkin-official>=30,<31
+          - typing-extensions>=4.8,<5
 
   - repo: local
     hooks:
